--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>庆丰商城后台系统</title>
+    <title>乐有商城后台系统</title>
     <link rel="shortcut icon" href="static/favicon.ico">
     <link rel="bookmark" href="static/favicon.ico">
     <!-- HTTP 1.1 -->
