--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>乐有商城后台系统</title>
-    <link rel="shortcut icon" href="static/favicon.ico">
-    <link rel="bookmark" href="static/favicon.ico">
+    <link rel="shortcut icon" href="static/favicon.ico" />
+    <link rel="bookmark" href="static/favicon.ico" />
     <!-- HTTP 1.1 -->
-    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="pragma" content="no-cache" />
     <!-- HTTP 1.0 -->
-    <meta http-equiv="cache-control" content="no-cache">
+    <meta http-equiv="cache-control" content="no-cache" />
     <!-- Prevent caching at the proxy server -->
-    <meta http-equiv="expires" content="0">
-</head>
+    <meta http-equiv="expires" content="0" />
+  </head>
 
-<body>
+  <body>
     <div id="app"></div>
     <script src="./static/config.js"></script>
     <!-- built files will be auto injected -->
-</body>
-
+  </body>
 </html>
